# Smoldyn

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.ci/: dev_build_win32_msys.sh
.github/workflows/: linux.yml  osx.yml  windows.yml
examples/S5_graphics/: graphics3.txt
scripts/: build_wheels_linux.sh  build_wheels_osx.sh
smoldyn/: Cargo.toml
smoldyn-rs/: Cargo.toml  build.rs
smoldyn/src/: lib.rs
source/: smoldynconfigure.h.in
source/NextSubVolume/: nsvc.cpp  nsvc.h
source/Smoldyn/: smolcomparts.c  smoldyn.cpp  smoldyn.h  smolreact.c  smolsim.cpp  smolsurface.c
source/gui/: CMakeLists.txt  common.h  graphics.cpp  graphics.h  gui.hpp  helper.hpp  imgui.cpp  window.cpp  window.h  window.hpp
source/libSteve/: opengl2.h  string2.c  string2.h
source/python/: CMakeLists.txt  Simulation.cpp  module.cpp
src/: main.rs
steve/: Cargo.toml  build.rs  wrapper.h
steve/src/: lib.rs  main.rs
