[package]
name = "smoldyn"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0.110", features = ["c++17"] }

[build-dependencies]
anyhow = "1.0.75"
glob = "0.3.1"
cxx-build = "1.0.110"
cc = "1.0.83"
